# Kokonut-Intelligence

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.sandbox.yml  docker-compose.traefik.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
contracts/: .gitignore  foundry.toml  remappings.txt
docs/: advisor-review-guide.md  agent-access.md  agent-safety.md  agent-workflows.md  api-reference.md  architecture.md  attestation-guide.md  bio-factory-operations.md  capital-efficiency.md  cids-mapping.md  common-foundations-checklist.md  commons-liberation.md  crisp-risk-scoring.md  data-dictionary.md  deployment.md  dmrv-architecture.md  ebf-implementation-memo.md  ebf-scorecard.md  ebf-trust-graph.md  ecological-modeling.md  evidence-maturity.md  export-guide.md  field-data-collection-guide.md  financial-sustainability.md  gnh-alignment.md  green-paper-v1.md  holistic-wellbeing.md  kokonut-commons-governance.md  metrics-by-phase.md  open-source-capitalist-scaling.md  openapi.yaml  operator-guide.md  participatory-metrics.md  partner-dashboards.md  prd-completion.md  public-report-disclaimer.md  regenerative-outcomes.md  reviewer-guide.md  (+9 more)
sdk/python/: pyproject.toml
sdk/python/examples/: batch_upload.py  create_farm.py  pagination_and_errors.py  query_noi.py  workflow.py
sdk/python/kokonut/: __init__.py  client.py  methods.py  types.py
(+693 files in other folders)
