[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kokonut-intelligence"
version = "0.1.0"
description = "Python SDK for Kokonut Intelligence Platform"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
