[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kokonut-intelligence"
version = "0.1.0"
description = "Python SDK for Kokonut Intelligence Platform"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
clickhouse = ["clickhouse-connect>=0.7.0"]
web3 = ["web3>=6.0.0"]
all = [
    "requests>=2.28.0",
    "psycopg2-binary>=2.9.9",
    "clickhouse-connect>=0.7.0",
    "web3>=6.0.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["services*", "sdk*"]
